--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -8,3 +8,19 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_SSD1306=y
+
+
+
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_LEDS=35        # или сколько у вас светодиодов, обычно 12 на половину для Lily58
+CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_NUM_LEDS=35               # то же число
+
+# Можно добавить:
+CONFIG_ZMK_RGB_UNDERGLOW_EFFECT_BREATHING=y
+CONFIG_ZMK_RGB_UNDERGLOW_EFFECT_RAINBOW_SWIRL=y
+CONFIG_ZMK_RGB_UNDERGLOW_DEFAULT_EFFECT="RAINBOW_SWIRL"
+CONFIG_ZMK_RGB_UNDERGLOW_DEFAULT_HUE=90
+CONFIG_ZMK_RGB_UNDERGLOW_DEFAULT_SAT=255
+CONFIG_ZMK_RGB_UNDERGLOW_DEFAULT_VAL=255
