--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -10,8 +10,8 @@ CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_SSD1306=y
 
 # RGB underglow (всё что требуется в вашем случае)
-CONFIG_ZMK_RGB_UNDERGLOW=y
-
+CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_WS2812_STRIP=y
 # Если нужен энкодер, раскомментируйте:
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
