--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -21,6 +21,9 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 #Bongo cat猫猫敲键盘动画
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 
 #休眠相关配置
 # Milliseconds of inactivity before entering idle state	(10 minute)
