--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -20,7 +20,8 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 #CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
 #Bongo cat猫猫敲键盘动画
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+# Отключаем встроенный экран статуса ZMK
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
