--- a/config/boards/shields/lily58/lily58_left.conf
+++ b/config/boards/shields/lily58/lily58_left.conf
@@ -13,9 +13,16 @@ CONFIG_WS2812_STRIP=y
 
 # OLED配置
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_LAYER=y
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
 #CONFIG_ZMK_WIDGET_LUNA=y
 #CONFIG_ZMK_WIDGET_WPM_STATUS=n
