--- a/config/boards/shields/lily58/lily58_right.conf
+++ b/config/boards/shields/lily58/lily58_right.conf
@@ -13,8 +13,10 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
+#CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 #CONFIG_ZMK_WIDGET_WPM_STATUS=y
 #CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 #CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
