--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -11,8 +11,15 @@ CONFIG_ZMK_KEYBOARD_NAME="Lily58"
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # oled相关配置
-CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_LAYER=y
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 # Enable a widget to show words per minute
 #CONFIG_ZMK_WIDGET_WPM_STATUS=n
@@ -21,10 +28,10 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 #Bongo cat猫猫敲键盘动画
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
 # Отключаем встроенный экран статуса ZMK
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 
 #休眠相关配置
 # Milliseconds of inactivity before entering idle state	(10 minute)
