--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -16,6 +16,10 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+CONFIG_NICE_OLED_WIDGET_LAYER=y
+
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 # Enable a widget to show words per minute
 #CONFIG_ZMK_WIDGET_WPM_STATUS=n
@@ -31,7 +35,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 #休眠相关配置
 # Milliseconds of inactivity before entering idle state	(10 minute)
-#CONFIG_ZMK_IDLE_TIMEOUT=600000
+CONFIG_ZMK_IDLE_TIMEOUT=18000000
 # Enable deep sleep support	
 #CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep (15 minutes)
