--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -14,7 +14,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
