Edit binding keys

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -18,9 +18,15 @@ CONFIG_NICE_OLED_ON=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
+# Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_LAYER=y
+
+# Отключаем все анимации
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 # Enable a widget to show words per minute
