--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -18,14 +18,18 @@ CONFIG_NICE_OLED_ON=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
+# Настраиваем HID
+CONFIG_ZMK_HID_INDICATORS=y
+
 # Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
+CONFIG_NICE_OLED_WIDGET_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_WPM=y
-CONFIG_NICE_OLED_WIDGET_LAYER=y
+#CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # Отключаем все анимации
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=n
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
