--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -20,7 +20,9 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Настраиваем HID
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=n
 CONFIG_ZMK_HID_INDICATORS=y
+CONFIG_NICE_OLED_WIDGET_RAW_HID=y
 CONFIG_NICE_OLED_WIDGET_RAW_HID_LAYOUT=y
 
 # Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
@@ -29,7 +31,7 @@ CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-#CONFIG_NICE_OLED_WIDGET_LAYER=y
+CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # Отключаем все анимации
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
