--- a/config/boards/shields/lily58/lily58_left.conf
+++ b/config/boards/shields/lily58/lily58_left.conf
@@ -1,22 +1,25 @@
-# ZMK Studio
+#zmk studio配置
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 
-# RGB
+#rgb配置
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+#键盘进入空闲状态时关闭RGB
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# OLED - левая сторона (CENTRAL)
+
+# OLED配置
 CONFIG_ZMK_DISPLAY=y
-
-# Отключаем встроенные виджеты
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-
-# Включаем WPM Graph для левой стороны
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_LAYER=y
+#CONFIG_ZMK_WIDGET_BONGO_CAT=y
+#CONFIG_ZMK_WIDGET_LUNA=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=n
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=y
+# label
+#CONFIG_ZMK_WIDGET_LABEL=y
+#CONFIG_ZMK_WIDGET_LABEL_TEXT="----  sofle_RGB"
