Edit binding keys

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -16,13 +16,13 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_NICE_OLED_ON=y
-CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Настраиваем HID
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=n
-CONFIG_ZMK_HID_INDICATORS=y
+#CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+##CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=n
+#CONFIG_ZMK_HID_INDICATORS=y
 
 # Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
 CONFIG_NICE_OLED_WIDGET_WPM=y
@@ -30,10 +30,10 @@ CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_LAYER=y
+#CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # Отключаем все анимации
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
+#CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
@@ -52,7 +52,7 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 #休眠相关配置
 # Milliseconds of inactivity before entering idle state	(10 minute)
-CONFIG_ZMK_IDLE_TIMEOUT=18000000
+CONFIG_ZMK_IDLE_TIMEOUT=600000
 # Enable deep sleep support	
 #CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep (15 minutes)
@@ -67,9 +67,9 @@ CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
 
 # Rotary encoder
 CONFIG_EC11=y
