--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -15,7 +15,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_NICE_OLED_ON=y
+#CONFIG_NICE_OLED_ON=y
 #CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
@@ -25,17 +25,17 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 #CONFIG_ZMK_HID_INDICATORS=y
 
 # Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
-CONFIG_NICE_OLED_WIDGET_WPM=n
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
-CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
-CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+#CONFIG_NICE_OLED_WIDGET_WPM=n
+#CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+#CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
+#CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
+#CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
 #CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # Отключаем все анимации
 #CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
+#CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+#CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 # Enable a widget to show words per minute
@@ -54,9 +54,9 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 # Milliseconds of inactivity before entering idle state	(10 minute)
 CONFIG_ZMK_IDLE_TIMEOUT=600000
 # Enable deep sleep support	
-#CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep (15 minutes)
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # ZMK Studio
 CONFIG_ZMK_STUDIO=y
@@ -66,10 +66,12 @@ CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 # RGB (общие настройки)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+#键盘进入空闲状态时关闭RGB
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
 
 # Rotary encoder
 CONFIG_EC11=y
