--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -14,7 +14,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-#CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Настраиваем HID
@@ -47,21 +47,24 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 #CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 #CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 
+
 #休眠相关配置
 # Milliseconds of inactivity before entering idle state	(10 minute)
 CONFIG_ZMK_IDLE_TIMEOUT=600000
 # Enable deep sleep support	
-#CONFIG
 CONFIG_ZMK_SLEEP=y
-#CONFIG
+# Milliseconds of inactivity before entering deep sleep (15 minutes)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+# zmk studio相关配置
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
-
-# RGB (общие настройки)
-CONFIG_ZCONFIG_ZMK_RGB_UNDERGLOW=y
+#rgb相关配置
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+
+
 #键盘进入空闲状态时关闭RGB
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
