--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
     # Additional modules containing boards/shields/custom code can be listed here as well
