Edit binding keys

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -10,12 +10,12 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 
 # Отключаем встроенные виджеты глобально
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+# CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+# CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 
 # Настраиваем HID
 #CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
@@ -23,17 +23,17 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 #CONFIG_ZMK_HID_INDICATORS=y
 
 # Вариант 1: ТОЛЬКО WPM Graph (для обеих сторон)
-CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
-CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
-CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+# CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
+# CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
+# CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+# CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
+# CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
 #CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # Отключаем все анимации
-#CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
+# #CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
+# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 # Enable a widget to show words per minute
@@ -71,7 +71,7 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=70
 
 # Rotary encoder
 CONFIG_EC11=y
