--- a/config/lily58_right.conf
+++ b/config/lily58_right.conf
@@ -8,6 +8,17 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # OLED配置
 CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+
+
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 #CONFIG_ZMK_WIDGET_BONGO_CAT=y
 #CONFIG_ZMK_WIDGET_LUNA=y
 #CONFIG_ZMK_WIDGET_WPM_STATUS=y
