--- a/config/lily58_left.conf
+++ b/config/lily58_left.conf
@@ -11,6 +11,12 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+CONFIG_NICE_OLED_ON=n
 # OLED配置
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
